--- a/index.html
+++ b/index.html
@@ -1,6 +1,165 @@
-<html>
-	<body>	
-		<h1>Bear Traffic Control</h1>
-		<p>Placeholder for actual website</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+
+    <title>Bear Traffic Control</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/css/carousel.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+
+        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/"><img src="/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="/downloads.html">Get the game</a></li>
+                <li><a href="/gettingstarted.html">Getting Started</a></li>
+                <li><a href="/usermanual.html">User Manual</a></li>
+                <li><a href="/thegame.html">The Game</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="/img/radarTitle.png" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+				<img src="/img/bear_team.png" style="width: 300px;" alt="First slide">
+              <h1>The development team</h1>
+              <p>Bear Traffic Control has been developed by Team FLR as part of our 2013-14 SEPR team project. To find out more, visit our wiki.</p>
+              <p><a class="btn btn-lg btn-primary" href="http://www-module.cs.york.ac.uk/sepr/wiki/index.php?title=FLR" target="_blank" role="button">Visit the FLR wiki</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="/img/radarTitle.png" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>User manuals now available</h1>
+              <p>You can now find the BTC user manual and getting started guide on this website. Just follow the links below to take a look.</p>
+              <p><a class="btn btn-lg btn-primary" href="/usermanual.html" role="button">User Manual</a>
+              <a class="btn btn-lg btn-primary" href="/gettingstarted.html" role="button">Getting Started</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="/img/radarTitle.png" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+            	<img src="/img/logo.png" alt="First slide">
+              	<h1>New Logo!</h1>
+              	<p>Bear Traffic Control now has a new logo. Note: The logo displayed here may not actually be the new logo, but it is a logo.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div><!-- /.carousel -->
+
+
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+
+      <!-- START THE FEATURETTES -->
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">The big question. <span class="text-muted">Why Bear Traffic Control?</span></h2>
+          <p class="lead">You may be wondering why we called it Bear Traffic Control and there is a simple answer. Everyone likes bears. They just make life better. Probably. </p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/img/btc.jpeg" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/img/radar.png" alt="Game Main Menu Screenshot">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">The goal of BTC. <span class="text-muted">It's really pretty simple.</span></h2>
+          <p class="lead">As a player, all you have to do is get planes through your airspace from their origin to their destination. Just make sure you adhere to separation rules and avoid crashes or your secret will be revealed. "What secret?" you say. You'll have to play to find out.</p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Built to be expandable. <span class="text-muted">Why limit yourself?</span></h2>
+          <p class="lead">The current version of Bear Traffic Control has been built to fullfill some basic requirements. However, we have designed everything from our classes to our GUI to be as expandable as possible. All of our code is available on GitHub, just search &#8220;bear traffic control&#8221; or click the button below to be taken straight there.</p>
+          <p><a class="btn btn-lg btn-primary" href="https://github.com/IMP1/bear_traffic_controller" target="_blank" role="button">BTC on GitHub</a></p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/img/github.png" alt="GitHub Screenshot">
+        </div>
+      </div>
+
+      <!-- /END THE FEATURETTES -->
+
+	<hr>
+
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>SEPR Team FLR</p>
+      </footer>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/docs-assets/js/holder.js"></script>
+  </body>
 </html>
