Updated all location paths to include /bear_traffic_controller

--- a/downloads.html
+++ b/downloads.html
@@ -11,7 +11,7 @@
     <title>Bear Traffic Control</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="/css/carousel.css" rel="stylesheet">
@@ -31,15 +31,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/"><img src="/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
+              <a class="navbar-brand" href="/"><img src="/bear_traffic_controller/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li class="active"><a href="/downloads.html">Get the game</a></li>
-                <li><a href="/gettingstarted.html">Getting Started</a></li>
-                <li><a href="/usermanual.html">User Manual</a></li>
-                <li><a href="/thegame.html">The Game</a></li>
+                <li><a href="/bear_traffic_controller/">Home</a></li>
+                <li class="active"><a href="/bear_traffic_controller/downloads.html">Get the game</a></li>
+                <li><a href="/bear_traffic_controller/gettingstarted.html">Getting Started</a></li>
+                <li><a href="/bear_traffic_controller/usermanual.html">User Manual</a></li>
+                <li><a href="/bear_traffic_controller/thegame.html">The Game</a></li>
               </ul>
             </div>
           </div>
@@ -57,28 +57,28 @@
     <div class="row">
     	<div class="col-lg-12" style="text-align: center;">
     		<h1>Downloads</h1>
-    		<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/gettingstarted.html">getting started</a></p>
+    		<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/bear_traffic_controller/gettingstarted.html">getting started</a></p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->		
     	
     <div class="row" style="padding-top: 40px;">
      	<div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/img/logos/windows_logo.png" alt="Windows Logo">
+          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/windows_logo.png" alt="Windows Logo">
           	<h4>Windows</h4>
           	<p>Urgh.</p>
-          	<p><a class="btn btn-default" href="/usermanual.html" role="button">Download .exe</a></p>
+          	<p><a class="btn btn-default" href="/bear_traffic_controller/usermanual.html" role="button">Download .exe</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/img/logos/OSX_logo.png" alt="OS X Logo">
+          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/OSX_logo.png" alt="OS X Logo">
           	<h4>Mac OS X</h4>
           	<p>Yes.</p>
-          	<p><a class="btn btn-default" href="/usermanual.html" role="button">Download .app</a></p>
+          	<p><a class="btn btn-default" href="/bear_traffic_controller/usermanual.html" role="button">Download .app</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/img/logos/linux_logo.jpg" alt="Exit Button">
+          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/linux_logo.jpg" alt="Exit Button">
           	<h4>Linux</h4>
           	<p>Meh.</p>
-          	<p><a class="btn btn-default" href="/usermanual.html" role="button">Download .sh</a></p>
+          	<p><a class="btn btn-default" href="/bear_traffic_controller/usermanual.html" role="button">Download .sh</a></p>
         </div><!-- /.col-lg-4 -->
 	</div><!-- /.row -->
 	
@@ -86,7 +86,7 @@
      	<div class="col-lg-4" style="text-align: center;">
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/img/logos/github_logo.jpg" alt="GitHub Logo">
+          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/github_logo.jpg" alt="GitHub Logo">
           	<h4>GitHub</h4>
           	<p>To view and download all of the code for BTC visit us on GitHub.</p>
           	<p><a class="btn btn-default" href="https://github.com/IMP1/bear_traffic_controller" target="_blank" role="button">Go to GitHub</a></p>
@@ -109,7 +109,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/docs-assets/js/holder.js"></script>
+    <script src="/bear_traffic_controller/js/bootstrap.min.js"></script>
+    <script src="/bear_traffic_controller/js/holder.js"></script>
   </body>
 </html>
