--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -11,10 +11,10 @@
     <title>Bear Traffic Control</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/carousel.css" rel="stylesheet">
+    <link href="/bear_traffic_controller/css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -31,15 +31,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/"><img src="/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
+              <a class="navbar-brand" href="/bear_traffic_controller/"><img src="/bear_traffic_controller/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/downloads.html">Get the game</a></li>
-                <li class="active"><a href="/gettingstarted.html">Getting Started</a></li>
-                <li><a href="/usermanual.html">User Manual</a></li>
-                <li><a href="/thegame.html">The Game</a></li>
+                <li><a href="/bear_traffic_controller/">Home</a></li>
+                <li><a href="/bear_traffic_controller/downloads.html">Get the game</a></li>
+                <li class="active"><a href="/bear_traffic_controller/gettingstarted.html">Getting Started</a></li>
+                <li><a href="/bear_traffic_controller/usermanual.html">User Manual</a></li>
+                <li><a href="/bear_traffic_controller/thegame.html">The Game</a></li>
               </ul>
             </div>
           </div>
@@ -67,7 +67,7 @@
     	<div class="col-lg-12" style="text-align: center;">
     		<h2>Step 1. Download</h2>
     		<p>&nbsp;</p>
-    		<img style="width:500px;" src="/img/manual/downloads_page.png" alt="Screenshot of downloads page">
+    		<img style="width:500px;" src="/bear_traffic_controller/img/manual/downloads_page.png" alt="Screenshot of downloads page">
     		<p>&nbsp;</p>
     		<p>Bear Traffic Control is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/downloads.html">here</a></p>
     	</div><!-- /.col-lg-12 -->
@@ -79,7 +79,7 @@
     	<div class="col-lg-12" style="text-align: center;">
     		<h2>Step 2. Launch the game</h2>
     		<p>&nbsp;</p>
-    		<img style="width:100px;" src="/img/manual/BTC_app.png" alt="Bear Traffic Control app icon">
+    		<img style="width:100px;" src="/bear_traffic_controller/img/manual/BTC_app.png" alt="Bear Traffic Control app icon">
     		<p>&nbsp;</p>
     		<p>To launch the game, simply open the file you downloaded in the previous step.</p>
     	</div><!-- /.col-lg-12 -->
@@ -91,7 +91,7 @@
     	<div class="col-lg-12" style="text-align: center;">
         	<h2>Step 3. Click Play Demo</h2>
         	<p>&nbsp;</p>
-    		<img style="width:500px;" src="/img/manual/Main_Menu.png" alt="Main menu screenshot">
+    		<img style="width:500px;" src="/bear_traffic_controller/img/manual/Main_Menu.png" alt="Main menu screenshot">
     		<p>&nbsp;</p>
         	<p>At the moment, BTC is only available in the form of a demo. To launch this and play the game, click "Play Demo"</p>
         </div><!-- /.col-lg-12 -->
@@ -103,7 +103,7 @@
     	<div class="col-lg-12" style="text-align: center;">
     		<h2>Step 4. Select your difficulty level</h2>
     		<p>&nbsp;</p>
-    		<img style="width:500px;" src="/img/manual/Difficulty_Selection_Screen.png" alt="Difficulty selection screen screenshot">
+    		<img style="width:500px;" src="/bear_traffic_controller/img/manual/Difficulty_Selection_Screen.png" alt="Difficulty selection screen screenshot">
     		<p>&nbsp;</p>
           	<p>The difficulty selection screen will explain your characters back story, you should read this if you haven't before. It's also on this screen that you can choose the difficulty level you would like to play at. To select one of these simply click on the relevant button.</p>
         </div><!-- /.col-lg-12 -->
@@ -130,7 +130,7 @@
     	<div class="col-lg-12" style="text-align: center;">
         	<h2>Step 5. Play the game</h2>
         	<p>&nbsp;</p>
-        	<img style="width:500px;" src="/img/manual/Game_Play_Screen.png" alt="Main game play screen screenshot">
+        	<img style="width:500px;" src="/bear_traffic_controller/img/manual/Game_Play_Screen.png" alt="Main game play screen screenshot">
         	<p>&nbsp;</p>
           	<p>You are now ready to take control of your airspace. Remember, get planes safely to their destinations without any separation violations or crashes.</p>
           	<p>If you need more information about Bear Traffic Control gameplay or help playing the game please refer to the full <a href="/usermanual.html">user manual</a></p>
@@ -151,7 +151,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/docs-assets/js/holder.js"></script>
+    <script src="/bear_traffic_controller/js/bootstrap.min.js"></script>
+    <script src="/bear_traffic_controller/js/holder.js"></script>
   </body>
 </html>
