--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Bear Traffic Control</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/carousel.css" rel="stylesheet">
+    <link href="/bear_traffic_controller/css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -31,15 +31,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/"><img src="/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
+              <a class="navbar-brand" href="/bear_traffic_controller/"><img src="/bear_traffic_controller/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="/downloads.html">Get the game</a></li>
-                <li><a href="/gettingstarted.html">Getting Started</a></li>
-                <li><a href="/usermanual.html">User Manual</a></li>
-                <li><a href="/thegame.html">The Game</a></li>
+                <li><a href="/bear_traffic_controller/downloads.html">Get the game</a></li>
+                <li><a href="/bear_traffic_controller/gettingstarted.html">Getting Started</a></li>
+                <li><a href="/bear_traffic_controller/usermanual.html">User Manual</a></li>
+                <li><a href="/bear_traffic_controller/thegame.html">The Game</a></li>
               </ul>
             </div>
           </div>
@@ -60,10 +60,10 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="/img/radarTitle.png" alt="First slide">
+          <img src="/bear_traffic_controller/img/radarTitle.png" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-				<img src="/img/bear_team.png" style="width: 300px;" alt="First slide">
+				<img src="/bear_traffic_controller/img/bear_team.png" style="width: 300px;" alt="First slide">
               <h1>The development team</h1>
               <p>Bear Traffic Control has been developed by Team FLR as part of our 2013-14 SEPR team project. To find out more, visit our wiki.</p>
               <p><a class="btn btn-lg btn-primary" href="http://www-module.cs.york.ac.uk/sepr/wiki/index.php?title=FLR" target="_blank" role="button">Visit the FLR wiki</a></p>
@@ -71,21 +71,21 @@
           </div>
         </div>
         <div class="item">
-          <img src="/img/radarTitle.png" alt="Second slide">
+          <img src="/bear_traffic_controller/img/radarTitle.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>User manuals now available</h1>
               <p>You can now find the BTC user manual and getting started guide on this website. Just follow the links below to take a look.</p>
-              <p><a class="btn btn-lg btn-primary" href="/usermanual.html" role="button">User Manual</a>
-              <a class="btn btn-lg btn-primary" href="/gettingstarted.html" role="button">Getting Started</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/bear_traffic_controller/usermanual.html" role="button">User Manual</a>
+              <a class="btn btn-lg btn-primary" href="/bear_traffic_controller/gettingstarted.html" role="button">Getting Started</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="/img/radarTitle.png" alt="Second slide">
+          <img src="/bear_traffic_controller/img/radarTitle.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-            	<img src="/img/logo.png" alt="First slide">
+            	<img src="/bear_traffic_controller/img/logo.png" alt="First slide">
               	<h1>New Logo!</h1>
               	<p>Bear Traffic Control now has a new logo. Note: The logo displayed here may not actually be the new logo, but it is a logo.</p>
             </div>
@@ -113,7 +113,7 @@
           <p class="lead">You may be wondering why we called it Bear Traffic Control and there is a simple answer. Everyone likes bears. They just make life better. Probably. </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/img/btc.jpeg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/bear_traffic_controller/img/btc.jpeg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -121,7 +121,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/img/radar.png" alt="Game Main Menu Screenshot">
+          <img class="featurette-image img-responsive" src="/bear_traffic_controller/img/radar.png" alt="Game Main Menu Screenshot">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">The goal of BTC. <span class="text-muted">It's really pretty simple.</span></h2>
@@ -138,7 +138,7 @@
           <p><a class="btn btn-lg btn-primary" href="https://github.com/IMP1/bear_traffic_controller" target="_blank" role="button">BTC on GitHub</a></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/img/github.png" alt="GitHub Screenshot">
+          <img class="featurette-image img-responsive" src="/bear_traffic_controller/img/github.png" alt="GitHub Screenshot">
         </div>
       </div>
 
@@ -159,7 +159,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/docs-assets/js/holder.js"></script>
+    <script src="/bear_traffic_controller/js/bootstrap.min.js"></script>
+    <script src="/bear_traffic_controller/js/holder.js"></script>
   </body>
 </html>
