Added updated download files

--- a/downloads.html
+++ b/downloads.html
@@ -57,29 +57,21 @@
     <div class="row">
     	<div class="col-lg-12" style="text-align: center;">
     		<h1>Downloads</h1>
-    		<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/bear_traffic_controller/gettingstarted.html">getting started</a></p>
+    		<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/bear_traffic_controller/gettingstarted.html">getting started guide</a></p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->		
     	
     <div class="row" style="padding-top: 40px;">
-     	<div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/windows_logo.png" alt="Windows Logo">
+     	<div class="col-lg-6" style="text-align: center;">
           	<h4>Windows</h4>
-          	<p>Urgh.</p>
-          	<p><a class="btn btn-default" href="/bear_traffic_controller/usermanual.html" role="button">Download .exe</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/OSX_logo.png" alt="OS X Logo">
-          	<h4>Mac OS X</h4>
-          	<p>Yes.</p>
-          	<p><a class="btn btn-default" href="/bear_traffic_controller/usermanual.html" role="button">Download .app</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" style="text-align: center;">
-          	<img style="height:80px;" src="/bear_traffic_controller/img/logos/linux_logo.jpg" alt="Exit Button">
-          	<h4>Linux</h4>
-          	<p>Meh.</p>
-          	<p><a class="btn btn-default" href="/bear_traffic_controller/usermanual.html" role="button">Download .sh</a></p>
-        </div><!-- /.col-lg-4 -->
+          	<p>Download the .exe file below to play BTC on windows</p>
+          	<p><a class="btn btn-default" href="/bear_traffic_controller/files/bear_traffic_controller_windows.exe" role="button">Download .exe</a></p>
+        </div><!-- /.col-lg-6 -->
+        <div class="col-lg-6" style="text-align: center;">
+          	<h4>Other Operating Systems</h4>
+          	<p>Download the .jar file to play BTC on other operating systems (e.g. OS X and Linux)</p>
+          	<p><a class="btn btn-default" href="/bear_traffic_controller/files/bear_traffic_controller_osx.jar" role="button">Download .jar</a></p>
+        </div><!-- /.col-lg-6 -->
 	</div><!-- /.row -->
 	
 	<div class="row" style="padding-top: 40px;">
