--- a/thegame.html
+++ b/thegame.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+    <link rel="shortcut icon" href="/bear_traffic_controller/img/favicon.ico">
 
     <title>Bear Traffic Control</title>
 
