Add developers page to sell game to developers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="/bear_traffic_controller/downloads.html">Get the game</a></li>
                 <li><a href="/bear_traffic_controller/gettingstarted.html">Getting Started</a></li>
                 <li><a href="/bear_traffic_controller/usermanual.html">User Manual</a></li>
-                <li><a href="/bear_traffic_controller/thegame.html">The Game</a></li>
+                <li><a href="/bear_traffic_controller/developers.html">Developers</a></li>
               </ul>
             </div>
           </div>
