Updated screenshots and user manual

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -106,23 +106,9 @@
     		<img style="width:500px;" src="/bear_traffic_controller/img/manual/Difficulty_Selection_Screen.png" alt="Difficulty selection screen screenshot">
     		<p>&nbsp;</p>
           	<p>The difficulty selection screen will explain your characters back story, you should read this if you haven't before. It's also on this screen that you can choose the difficulty level you would like to play at. To select one of these simply click on the relevant button.</p>
+          	<p>The higher the difficult level you select, the faster the planes will move through your airspace and the less time you will have to respond. The tolerances for separation violations will also reduce as you increase the difficulty.</p>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
-	
-    <div class="row">
-     	<div class="col-lg-4" style="text-align: center;">
-          	<h4>Easy</h4>
-          	<p>Explain what makes each difficult level.</p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" style="text-align: center;">
-          	<h4>Medium</h4>
-          	<p>Explain what makes each difficult level.</p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" style="text-align: center;">
-          	<h4>Hard</h4>
-          	<p>Explain what makes each difficult level.</p>
-        </div><!-- /.col-lg-4 -->
-	</div><!-- /.row -->
      
     <hr> 
      
