--- a/ingamehelp.html
+++ b/ingamehelp.html
@@ -99,24 +99,9 @@
     	<div class="col-lg-12" style="text-align: center; padding-top: 40px;">
     		<img style="width:500px;" src="/bear_traffic_controller/img/manual/Difficulty_Selection_Screen.png" alt="Difficulty selection screen screenshot">
         	<h3>Difficulty selection screen</h3>
-          	<p>The difficulty selection screen will explain your characters back story, you should read this if you haven't before. It's also on this screen that you can choose the difficulty level you would like to play at. To select one of these simply click on the relevant button.</p>
+          	<p>The higher the difficult level you select, the faster the planes will move through your airspace and the less time you will have to respond. The tolerances for separation violations will also reduce as you increase the difficulty.</p>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
-	
-    <div class="row" style="padding-top: 40px;">
-     	<div class="col-lg-4" style="text-align: center;">
-          	<h4>Easy</h4>
-          	<p>Explain what makes each difficult level.</p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" style="text-align: center;">
-          	<h4>Medium</h4>
-          	<p>Explain what makes each difficult level.</p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4" style="text-align: center;">
-          	<h4>Hard</h4>
-          	<p>Explain what makes each difficult level.</p>
-        </div><!-- /.col-lg-4 -->
-	</div><!-- /.row -->
      
     <hr> 
      
@@ -168,9 +153,11 @@
 	
 	<div class="row">
     	<div class="col-lg-12" style="text-align: center; padding-top: 40px;">
+    		<img style="height:200px;" src="/bear_traffic_controller/img/manual/Turn_Coordinator.png" alt="Screenshot of turn coordinator">
         	<h3>Changing a plane's altitude</h3>
           	<p>Changing a plane's altitude will move it on to the other altitude layer in the game. This can be useful to prevent crashes or separation violations.</p>
-          	<p>To change the altitude, simply click on the plane and then use your mouse's scroll wheel to toggle between the possible altitudes. The planes current altitude will be updated in the flight description box.</p>
+          	<p>To change the altitude, simply click on the plane and then click the up and down arrows in the turn coordinator box to move it in the respective direction.</p>
+          	<p>To change the control altitude (the altitude that you are currently controlling), simply move the scroll wheel on your mouse up and down. This will then allow you to select planes on different altitudes.</p>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
 	
