Fixed reference to Grey_Plane.png in usermanual.html

--- a/usermanual.html
+++ b/usermanual.html
@@ -227,7 +227,7 @@
           	<p>There are two altitude levels that planes can fly at in your airspace; 28,000 feet and 30,000 feet. You can switch between these using the scroll wheel on your mouse. The active altitude is displayed at the top of the screen, towards the middle.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
-        	<img style="height:40px;" src="/bear_traffic_controller/img/manual/Plane_White.png" alt="White Plane"><img style="height:40px;" src="/img/manual/Plane_Grey.png" alt="White Plane">
+        	<img style="height:40px;" src="/bear_traffic_controller/img/manual/Plane_White.png" alt="White Plane"><img style="height:40px;" src="/bear_traffic_controller/img/manual/Plane_Grey.png" alt="White Plane">
           	<h4>Planes</h4>
           	<p>Planes that are shown in white are on the altitude level that you are currently on, this is displayed next to the plane. Those that are grey are on a different altitude level and cannot be controlled until you switch control altitudes.</p>
         </div><!-- /.col-lg-4 -->
