Changed Developers to For Developers in navbar

--- a/developers.html
+++ b/developers.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/"><img src="/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
+              <a class="navbar-brand" href="/bear_traffic_controller/"><img src="/bear_traffic_controller/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -39,7 +39,7 @@
                 <li><a href="/bear_traffic_controller/downloads.html">Get the game</a></li>
                 <li><a href="/bear_traffic_controller/usermanual.html">User Manual</a></li>
                 <li><a href="/bear_traffic_controller/gettingstarted.html">Getting Started</a></li>
-                <li class="active"><a href="/bear_traffic_controller/developers.html">Developers</a></li>
+                <li class="active"><a href="/bear_traffic_controller/developers.html">For Developers</a></li>
               </ul>
             </div>
           </div>
