--- a/developers.html
+++ b/developers.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/bear_traffic_controller/"><img src="/bear_traffic_controller/img/logo.png" style="width: 20px; float: left;"> &ensp; Bear Traffic Control</a>
+              <a class="navbar-brand" href="/bear_traffic_controller/"><img src="/bear_traffic_controller/img/logo.png" style="width: 20px; float: left;"> &ensp; BTC</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
