Left aligned text in requirements section of developers.html

--- a/developers.html
+++ b/developers.html
@@ -138,7 +138,7 @@
     </div><!-- /.row --> 
     
     <div class="row">
-    	<div class="col-lg-6" style="text-align: center;">
+    	<div class="col-lg-6">
     		<h3>Functional Requirements</h3>
     		<ol>
     			<li>The game GUI shall display the game airspace and active flights.</li>
@@ -159,7 +159,7 @@
     			<li>The game shall allow aircraft to vary the rate at which they climb / descend.</li>
     		</ol>
     	</div><!-- /.col-lg-6 -->
-    	<div class="col-lg-6" style="text-align: center;">
+    	<div class="col-lg-6">
     		<h3>Non-functional Requirements</h3>
     		<ol>
     			<li>The game shall incorporate realism where possible/appropriate, but its primary goal is to provide a fun and enjoyable experience to the user.</li>
