Fixed css file reference in downloads.html

--- a/downloads.html
+++ b/downloads.html
@@ -14,7 +14,7 @@
     <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/carousel.css" rel="stylesheet">
+    <link href="/bear_traffic_controller/css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
