--- a/downloads.html
+++ b/downloads.html
@@ -52,14 +52,14 @@
     ================================================== -->
     <!-- Each row has an individual centre property for later use. -->
 
-    <div class="container marketing" style="padding-top: 90px;">
+    <div class="container marketing" style="padding-top: 90px;">	
     	
     <div class="row">
-    	<div class="col-lg-12" style="text-align: center;">
-    		<h1>Downloads</h1>
-    		<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/bear_traffic_controller/gettingstarted.html">getting started guide</a></p>
-    	</div><!-- /.col-lg-12 -->
-    </div><!-- /.row -->		
+     	<div class="col-lg-12" style="text-align: center;">
+          	<h1>Downloads</h1>
+          	<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/gettingstarted.html">getting started guide</a></p>
+        </div><!-- /.col-lg-12 -->
+	</div><!-- /.row -->	
     	
     <div class="row" style="padding-top: 40px;">
      	<div class="col-lg-6" style="text-align: center;">
@@ -86,6 +86,7 @@
         <div class="col-lg-4" style="text-align: center;">
         </div><!-- /.col-lg-4 -->
 	</div><!-- /.row -->
+
 	 
 	 <hr>
 	 
