Changed some occurrences of "BTC" to "Bear Traffic Control" throughout the website

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>User manuals now available</h1>
-              <p>You can now find the BTC user manual and getting started guide on this website. Just follow the links below to take a look.</p>
+              <p>You can now find the Bear Traffic Control user manual and getting started guide on this website. Just follow the links below to take a look.</p>
               <p><a class="btn btn-lg btn-primary" href="/bear_traffic_controller/usermanual.html" role="button">User Manual</a>
               <a class="btn btn-lg btn-primary" href="/bear_traffic_controller/gettingstarted.html" role="button">Getting Started</a></p>
             </div>
