--- a/developers.html
+++ b/developers.html
@@ -57,7 +57,7 @@
 	<div class="row">
     	<div class="col-lg-12" style="text-align: center;">
     		<h1>For Developers</h1>
-    		<p>Designed with you in mind</p>
+    		<p>Bear Traffic Control - designed with you in mind</p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->	
     	
