--- a/ingamehelp.html
+++ b/ingamehelp.html
@@ -56,7 +56,7 @@
     	
     <div class="row">
     	<div class="col-lg-12" style="text-align: center;">
-    		<h1>BTC - In Game Help</h1>
+    		<h1>Bear Traffic Control - In Game Help</h1>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->	
     	
