Fix download link from getting started page

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -69,7 +69,7 @@
     		<p>&nbsp;</p>
     		<img style="width:500px;" src="/bear_traffic_controller/img/manual/downloads_page.png" alt="Screenshot of downloads page">
     		<p>&nbsp;</p>
-    		<p>Bear Traffic Control is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/downloads.html">here</a></p>
+    		<p>Bear Traffic Control is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/bear_traffic_controller/downloads.html">here</a></p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
     
