Change "Bear Traffic Control" to "Bear Traffic Controller"

--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/bear_traffic_controller/img/favicon.ico">
 
-    <title>Bear Traffic Control</title>
+    <title>Bear Traffic Controller</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
@@ -64,12 +64,12 @@
     <div class="row" style="padding-top: 40px;">
      	<div class="col-lg-6" style="text-align: center;">
           	<h4>Windows</h4>
-          	<p>Download the .exe file below to play Bear Traffic Control on windows</p>
+          	<p>Download the .exe file below to play Bear Traffic Controller on windows</p>
           	<p><a class="btn btn-default" href="/bear_traffic_controller/files/bear_traffic_controller_windows.exe" role="button">Download .exe</a></p>
         </div><!-- /.col-lg-6 -->
         <div class="col-lg-6" style="text-align: center;">
           	<h4>Other Operating Systems</h4>
-          	<p>Download the .jar file to play Bear Traffic Control on other operating systems (e.g. OS X and Linux)</p>
+          	<p>Download the .jar file to play Bear Traffic Controller on other operating systems (e.g. OS X and Linux)</p>
           	<p><a class="btn btn-default" href="/bear_traffic_controller/files/bear_traffic_controller_osx.jar" role="button">Download .jar</a></p>
         </div><!-- /.col-lg-6 -->
 	</div><!-- /.row -->
@@ -80,7 +80,7 @@
         <div class="col-lg-4" style="text-align: center;">
           	<img style="height:80px;" src="/bear_traffic_controller/img/logos/github_logo.jpg" alt="GitHub Logo">
           	<h4>GitHub</h4>
-          	<p>To view and download all of the code for Bear Traffic Control visit us on GitHub.</p>
+          	<p>To view and download all of the code for Bear Traffic Controller visit us on GitHub.</p>
           	<p><a class="btn btn-default" href="https://github.com/IMP1/bear_traffic_controller" target="_blank" role="button">Go to GitHub</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
