--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/bear_traffic_controller/img/favicon.ico">
 
-    <title>Bear Traffic Control</title>
+    <title>Bear Traffic Controller</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
@@ -65,7 +65,7 @@
             <div class="carousel-caption">
 				<img src="/bear_traffic_controller/img/bear_team.png" style="width: 300px;" alt="First slide">
               <h1>The development team</h1>
-              <p>Bear Traffic Control has been developed by Team FLR as part of our 2013-14 SEPR team project. To find out more, visit our wiki.</p>
+              <p>Bear Traffic Controller has been developed by Team FLR as part of our 2013-14 SEPR team project. To find out more, visit our wiki.</p>
               <p><a class="btn btn-lg btn-primary" href="http://www-module.cs.york.ac.uk/sepr/wiki/index.php?title=FLR" target="_blank" role="button">Visit the FLR wiki</a></p>
             </div>
           </div>
@@ -75,7 +75,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>User manuals now available</h1>
-              <p>You can now find the Bear Traffic Control user manual and getting started guide on this website. Just follow the links below to take a look.</p>
+              <p>You can now find the Bear Traffic Controller user manual and getting started guide on this website. Just follow the links below to take a look.</p>
               <p><a class="btn btn-lg btn-primary" href="/bear_traffic_controller/usermanual.html" role="button">User Manual</a>
               <a class="btn btn-lg btn-primary" href="/bear_traffic_controller/gettingstarted.html" role="button">Getting Started</a></p>
             </div>
@@ -87,7 +87,7 @@
             <div class="carousel-caption">
             	<img src="/bear_traffic_controller/img/logo.png" alt="First slide">
               	<h1>New Logo!</h1>
-              	<p>Bear Traffic Control now has a new logo. Note: The logo displayed here may not actually be the new logo, but it is a logo.</p>
+              	<p>Bear Traffic Controller now has a new logo. Note: The logo displayed here may not actually be the new logo, but it is a logo.</p>
             </div>
           </div>
         </div>
@@ -109,8 +109,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">The big question. <span class="text-muted">Why Bear Traffic Control?</span></h2>
-          <p class="lead">You may be wondering why we called it Bear Traffic Control and there is a simple answer. Everyone likes bears. They just make life better. Probably. </p>
+          <h2 class="featurette-heading">The big question. <span class="text-muted">Why Bear Traffic Controller?</span></h2>
+          <p class="lead">You may be wondering why we called it Bear Traffic Controller and there is a simple answer. Everyone likes bears. They just make life better. Probably. </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="/bear_traffic_controller/img/btc.jpeg" alt="Generic placeholder image">
@@ -134,7 +134,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Built to be expandable. <span class="text-muted">Why limit yourself?</span></h2>
-          <p class="lead">The current version of Bear Traffic Control has been built to fullfill some basic requirements. However, we have designed everything from our classes to our GUI to be as expandable as possible. All of our code is available on GitHub, just search &#8220;bear traffic control&#8221; or click the button below to be taken straight there.</p>
+          <p class="lead">The current version of Bear Traffic Controller has been built to fullfill some basic requirements. However, we have designed everything from our classes to our GUI to be as expandable as possible. All of our code is available on GitHub, just search &#8220;Bear Traffic Controller&#8221; or click the button below to be taken straight there.</p>
           <p><a class="btn btn-lg btn-primary" href="https://github.com/IMP1/bear_traffic_controller" target="_blank" role="button">BTC on GitHub</a></p>
         </div>
         <div class="col-md-5">
