--- a/usermanual.html
+++ b/usermanual.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/bear_traffic_controller/img/favicon.ico">
 
-    <title>Bear Traffic Control</title>
+    <title>Bear Traffic Controller</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
@@ -65,7 +65,7 @@
     	
     <div class="row">
     	<div class="col-lg-12" style="text-align: center;">
-    		<h2>Step 1. Getting ready to play Bear Traffic Control</h2>
+    		<h2>Step 1. Getting ready to play Bear Traffic Controller</h2>
     		<p>Don't worry, this wont take long</p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
@@ -73,11 +73,11 @@
     <div class="row">
         <div class="col-lg-6" style="text-align: center;">
           	<h3>Download the Game</h3>
-          	<p>Bear Traffic Control is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/bear_traffic_controller/downloads.html">here</a>, if you haven't already.</p>
+          	<p>Bear Traffic Controller is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/bear_traffic_controller/downloads.html">here</a>, if you haven't already.</p>
         </div><!-- /.col-lg-6 -->
         <div class="col-lg-6" style="text-align: center;">
           	<h3>Launching the Game</h3>
-          	<p>To launch Bear Traffic Control, simply double click on the file that you downloaded in the previous step.</p>
+          	<p>To launch Bear Traffic Controller, simply double click on the file that you downloaded in the previous step.</p>
         </div><!-- /.col-lg-6 -->
     </div><!-- /.row -->
       
@@ -103,17 +103,17 @@
      	<div class="col-lg-4" style="text-align: center;">
           	<img style="height:40px;" src="/bear_traffic_controller/img/manual/Play_Demo_Button.png" alt="Play Demo Button">
           	<h4>Play Demo</h4>
-          	<p>At the moment, only a demo of the game is available. Press the "Play Demo" button to start playing Bear Traffic Control</p>
+          	<p>At the moment, only a demo of the game is available. Press the "Play Demo" button to start playing Bear Traffic Controller</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
           	<img style="height:40px;" src="/bear_traffic_controller/img/manual/Credits_Button.png" alt="Credits Button">
           	<h4>Roll the credits</h4>
-          	<p>Press the "Credits" button to see the names of all the people responsible for Bear Traffic Control scroll up your screen.</p>
+          	<p>Press the "Credits" button to see the names of all the people responsible for Bear Traffic Controller scroll up your screen.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="text-align: center;">
           	<img style="height:40px;" src="/bear_traffic_controller/img/manual/Exit_Button.png" alt="Exit Button">
           	<h4>Exit the game</h4>
-          	<p>To exit Bear Traffic Control, click on the "Exit" button.</p>
+          	<p>To exit Bear Traffic Controller, click on the "Exit" button.</p>
         </div><!-- /.col-lg-4 -->
 	</div><!-- /.row -->
 	
@@ -139,7 +139,7 @@
     	<div class="col-lg-12" style="text-align: center; padding-top: 40px;">
     		<img style="width:500px;" src="/bear_traffic_controller/img/manual/Game_Play_Screen.png" alt="Main game play screen screenshot">
         	<h3>Game Play Screen</h3>
-          	<p>The goal of Bear Traffic Control is to make sure that every plane makes it safely from it's origin to it's destination while passing through various waypoints along the way. When planes enter the game they are following a pre-planned route that will 
+          	<p>The goal of Bear Traffic Controller is to make sure that every plane makes it safely from it's origin to it's destination while passing through various waypoints along the way. When planes enter the game they are following a pre-planned route that will 
           		take them to their selected destination through a series of pre-selected waypoints. However, from time to time, these flight paths will cause planes to fly very close to each other, or worse, to crash. Your job is to make sure that the planes stay
           		far enough away from each other that they can make it safely to their destination by rerouting them to different waypoints or by taking manual control. The controls that you will require to do this are explained below. Further down the screen you will find
           		useful descriptions of each of the key elements on the game play screen.</p>
