--- a/developers.html
+++ b/developers.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/bear_traffic_controller/img/favicon.ico">
 
-    <title>Bear Traffic Control</title>
+    <title>Bear Traffic Controller</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
@@ -57,7 +57,7 @@
 	<div class="row">
     	<div class="col-lg-12" style="text-align: center;">
     		<h1>For Developers</h1>
-    		<p>Bear Traffic Control - designed with you in mind</p>
+    		<p>Bear Traffic Controller - designed with you in mind</p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->	
     	
