--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/bear_traffic_controller/img/favicon.ico">
 
-    <title>Bear Traffic Control</title>
+    <title>Bear Traffic Controller</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bear_traffic_controller/css/bootstrap.css" rel="stylesheet">
@@ -69,7 +69,7 @@
     		<p>&nbsp;</p>
     		<img style="width:500px;" src="/bear_traffic_controller/img/manual/downloads_page.png" alt="Screenshot of downloads page">
     		<p>&nbsp;</p>
-    		<p>Bear Traffic Control is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/bear_traffic_controller/downloads.html">here</a></p>
+    		<p>Bear Traffic Controller is provided to you in a simple "no install needed" file. All you have to do is download the correct version for your computer, which you can do by clicking <a href="/bear_traffic_controller/downloads.html">here</a></p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
     
@@ -79,7 +79,7 @@
     	<div class="col-lg-12" style="text-align: center;">
     		<h2>Step 2. Launch the game</h2>
     		<p>&nbsp;</p>
-    		<img style="width:100px;" src="/bear_traffic_controller/img/manual/BTC_app.png" alt="Bear Traffic Control app icon">
+    		<img style="width:100px;" src="/bear_traffic_controller/img/manual/BTC_app.png" alt="Bear Traffic Controller app icon">
     		<p>&nbsp;</p>
     		<p>To launch the game, simply open the file you downloaded in the previous step.</p>
     	</div><!-- /.col-lg-12 -->
@@ -119,7 +119,7 @@
         	<img style="width:500px;" src="/bear_traffic_controller/img/manual/Game_Play_Screen.png" alt="Main game play screen screenshot">
         	<p>&nbsp;</p>
           	<p>You are now ready to take control of your airspace. Remember, get planes safely to their destinations without any separation violations or crashes.</p>
-          	<p>If you need more information about Bear Traffic Control gameplay or help playing the game please refer to the full <a href="/usermanual.html">user manual</a></p>
+          	<p>If you need more information about Bear Traffic Controller gameplay or help playing the game please refer to the full <a href="/usermanual.html">user manual</a></p>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row --> 
 	 
