Added links to individual testing documents.

--- a/developers.html
+++ b/developers.html
@@ -133,7 +133,10 @@
     	<div class="col-lg-12" style="text-align: center;">
     		<h3>Test Plan</h3>
     		<p>This outlines the current test plan and all of our results</p>
-    		<p><a class="btn btn-default" href="/bear_traffic_controller/files/Test Plan.pdf" role="button">Test Plan</a></p>
+    		<p><a class="btn btn-default" href="/bear_traffic_controller/files/Test Plan.pdf" role="button">Test Plan</a>
+    			<a class="btn btn-default" href="/bear_traffic_controller/files/Integration_Testing.pdf" role="button">Integration Testing</a>
+    			<a class="btn btn-default" href="/bear_traffic_controller/files/Requirements_Testing.pdf" role="button">Requirements Testing</a>
+    			<a class="btn btn-default" href="/bear_traffic_controller/files/Unit_Testing.pdf" role="button">Unit Testing</a></p>
     	</div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
     
