Fixed link to user manual from gettingstarted.html

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -119,7 +119,7 @@
         	<img style="width:500px;" src="/bear_traffic_controller/img/manual/Game_Play_Screen.png" alt="Main game play screen screenshot">
         	<p>&nbsp;</p>
           	<p>You are now ready to take control of your airspace. Remember, get planes safely to their destinations without any separation violations or crashes.</p>
-          	<p>If you need more information about Bear Traffic Controller gameplay or help playing the game please refer to the full <a href="/usermanual.html">user manual</a></p>
+          	<p>If you need more information about Bear Traffic Controller gameplay or help playing the game please refer to the full <a href="/bear_traffic_controller/usermanual.html">user manual</a></p>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row --> 
 	 
