--- a/downloads.html
+++ b/downloads.html
@@ -57,7 +57,7 @@
     <div class="row">
      	<div class="col-lg-12" style="text-align: center;">
           	<h1>Downloads</h1>
-          	<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/gettingstarted.html">getting started guide</a></p>
+          	<p>Choose the correct version for your computer. Need help getting started? Then visit the <a href="/bear_traffic_controller/gettingstarted.html">getting started guide</a></p>
         </div><!-- /.col-lg-12 -->
 	</div><!-- /.row -->	
     	
